--- a/styles/global.css
+++ b/styles/global.css
@@ -15,6 +15,13 @@ box-sizing: border-box;
   /*Text*/
   --text-color-primary: #313131;
   --text-color-secondary: #6C6C6C;
+
+  --font-family: "Poppins", sans-serif;
+  --text-lg:bold 32px/125% var(--font-family) ; 
+  --text:16px/150% ;
+  --text-md:14px/175% var(--font-family);
+  --text-sm: 12px/157% var(--font-family)  ; 
+
 }
 
 body{
